# vectorized_batchpir

./: .gitignore  CMakeLists.txt  LICENSE  README.md
header/: batchpirclient.h  batchpirparams.h  batchpirserver.h  client.h  database_constants.h  pirparams.h  server.h
src/: batchpirclient.cpp  batchpirparams.cpp  batchpirserver.cpp  client.cpp  main.cpp  pirparams.cpp  server.cpp  utils.h
